<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickSquad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/squadOneBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/squad_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/squadTwoBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/squad_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/squadThreeBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/squad_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/squadFourBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/squad_4" />

    </LinearLayout>

</FrameLayout>